[package]
name = "advent_2022"
version = "0.1.0"
authors = ["Glen Oakley <goakley123@gmail.com>"]
edition = "2018"
default-run = "advent_2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
bench_scraper = { version = "0.4.0", features = ["reqwest"] }
nom = "7.1.1"
reqwest = { version = "0.11.13", features = ["blocking"] }
