[package]
name = "advent_2023"
version = "0.1.0"
authors = ["Glen Oakley <goakley123@gmail.com>"]
edition = "2021"
default-run = "advent_2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent = { path = "../advent" }
clap = { version = "4.4", features = ["derive"] }
bench_scraper = { version = "0.4", features = ["reqwest"] }
nom = "7.1"
reqwest = { version = "0.11", features = ["blocking"] }

[build-dependencies]
regex = "1.7"
proc-macro2 = "1.0"
